--background crash when rendering objects that reference data outside active scene #71012

Closed
opened 2019-10-22 07:34:45 +02:00 by Netherby · 15 comments

System Information
Operating system: Windows 10
Graphics card: GeForce GTX 1070

Blender Version
Broken: 2.80.75

Short description of error
Blender --background execution with a script that bakes a scene that has objects with (some?) modifiers will crash with 'EXCEPTION_ACCESS_VIOLATION'. Baking the same scene in interactive mode with same settings works without issue.

Exact steps for others to reproduce the error
I'm no longer sure exactly how this can be reproduced as it seems to be an interaction between two objects. Removing/apply modifiers causes the problem to go away however. I am attaching a very simple scene that demonstrates the crash and a basic script that will try to bake the scene.

Run blender on the command line with: crash1.blend --background --python crash.py

crash2.blend
crash.py

**System Information** Operating system: Windows 10 Graphics card: GeForce GTX 1070 **Blender Version** Broken: 2.80.75 **Short description of error** Blender --background execution with a script that bakes a scene that has objects with (some?) modifiers will crash with 'EXCEPTION_ACCESS_VIOLATION'. Baking the same scene in interactive mode with same settings works without issue. **Exact steps for others to reproduce the error** I'm no longer sure exactly how this can be reproduced as it seems to be an interaction between two objects. Removing/apply modifiers causes the problem to go away however. I am attaching a very simple scene that demonstrates the crash and a basic script that will try to bake the scene. Run blender on the command line with: crash1.blend --background --python crash.py [crash2.blend](https://archive.blender.org/developer/F7852859/crash2.blend) [crash.py](https://archive.blender.org/developer/F7852862/crash.py)

Added subscriber: @JerahmyPocott

Added subscriber: @JerahmyPocott

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Could you provide a simple blend file demonstrating the problem?

Could you provide a simple blend file demonstrating the problem?

Yes.

Actually while trying to generate the most simple example, I am no longer sure what actually causes the problem. It has something to do with modifiers, because applying all of them fixes it. But no single modifier seems to be the cause.

I will edit the report and attach a file that causes the error along with a basic script to run it (since it only happens in background mode).

Yes. Actually while trying to generate the most simple example, I am no longer sure what actually causes the problem. It has something to do with modifiers, because applying all of them fixes it. But no single modifier seems to be the cause. I will edit the report and attach a file that causes the error along with a basic script to run it (since it only happens in background mode).

Added subscriber: @Sergey

Added subscriber: @Sergey

I can't make command work.
@Sergey, could you take a look?

I can't make command work. @Sergey, could you take a look?

My guess is that it's a baking operator which is not using correct object.
This is area where Dalai is the most familiar person.

My guess is that it's a baking operator which is not using correct object. This is area where Dalai is the most familiar person.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm crash during baking in background mode.
When I pasted py script into text editor and run, script ended successfully.

Can confirm crash during baking in background mode. When I pasted py script into text editor and run, script ended successfully.

This issue was referenced by 5f66510a21

This issue was referenced by 5f66510a212d70a516f31ce3d9dec3ca495a04e7

This issue was referenced by 0016e73eda

This issue was referenced by 0016e73eda906140a189aa2233f1342a7526ddbd

This issue was referenced by 976b07056d

This issue was referenced by 976b07056d3e7321c9494fab3f1a1a4ea0cde92c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-09-10 08:20:46 +02:00

Note that this issue would also crash if you enabled locked-interface, it's wasn't Python spesific.

Note that this issue would also crash if you enabled locked-interface, it's wasn't Python spesific.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71012
There is no content yet.