Fix T71012: Cycles baking crash with locked-UI & background-mode